# zinfo

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  rust.yml
src/: hostname.rs  kver.rs  lib.rs  logo.rs  main.rs  mem.rs  os.rs  osname.rs  shell.rs  uptime.rs  whoami.rs
src/sysinfo/: mod.rs  osname.rs  shell.rs  whoami.rs
tests/: test.rs
