[package]
name = "zinfo"
version = "0.3.0"
authors = ["Maxwell Anderson <zaechus@pm.me>"]
edition = "2021"

description = "A cross-platform system information program"
repository = "https://github.com/Zaechus/zinfo"
license = "MIT"
exclude = [".github", "justfile"]

[dependencies]
crossterm = "0.26"

[profile.release]
panic = "abort"
strip = true
