[package]
name = "zinfo"
version = "0.3.1"
authors = ["Maxwell Anderson <zaechus@pm.me>"]
edition = "2021"

description = "A cross-platform system information program"
repository = "https://github.com/Zaechus/zinfo"
license = "MIT"
exclude = [".github", "justfile"]

[dependencies]
crossterm = "0.26"

[target.'cfg(windows)'.dependencies.windows]
version = "0.46.0"
features = ["Win32_System_SystemInformation"]

[profile.release]
panic = "abort"
strip = true
