[package]
name = "zinfo"
version = "0.3.2"
authors = ["Maxwell Anderson <zaechus@pm.me>"]
edition = "2021"

description = "A cross-platform system information program"
repository = "https://github.com/Zaechus/zinfo"
license = "MIT"
exclude = [".github", "justfile"]

[dependencies]
crossterm = "0.27"

[target.'cfg(windows)'.dependencies.windows]
version = "0.56.0"
features = [
  "Win32_System_SystemInformation",
  "Win32_Foundation"
]

[profile.release]
panic = "abort"
strip = true
